--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL_LOCAL=mongodb://localhost:27017/auth-system
+MONGODB_URL_LOCAL="mongodb+srv://pratikbhagat28:pratik@assignment.mh2tn.mongodb.net/?retryWrites=true&w=majority&appName=assignment"
 
 PORT = 4000
 
