--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongodb": "^6.9.0",
     "mongoose": "^5.13.22",
     "nodemon": "^3.1.0",
     "otp-generator": "^2.0.1"
