--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "otp-auth",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Anil Patidar",
-  "license": "MIT",
+  "author": "",
+  "license": "",
   "dependencies": {
     "axios": "^0.21.4",
     "bcrypt": "^5.1.1",
